feat(setup): some initial setup for the game * added `clang-format` and `Makefile` * added starter cpp code * added `.gitignore`

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,8 @@ ARG REINSTALL_CMAKE_VERSION_FROM_SOURCE="none"
 # Optionally install the cmake for vcpkg
 COPY ./reinstall-cmake.sh /tmp/
 
+RUN apt-get update && apt-get install -y clang-format
+
 RUN if [ "${REINSTALL_CMAKE_VERSION_FROM_SOURCE}" != "none" ]; then \
         chmod +x /tmp/reinstall-cmake.sh && /tmp/reinstall-cmake.sh ${REINSTALL_CMAKE_VERSION_FROM_SOURCE}; \
     fi \
